--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ publishDir = "docs"
   github = "http://github.com/michaeljerman"
   phone = "612-564-5355"
   # skype = "michaeljerman"
-  address = "1285 Univerity of Oregon <br> Eugene, OR 97403"
+  # address = "1285 Univerity of Oregon <br> Eugene, OR 97403"
   # office_hours = "By appointment"
   description = "" 
 
@@ -20,7 +20,7 @@ publishDir = "docs"
 [params.hero2]
   img = "images/head_cropped1.png"
   title = "Michael Jerman"
-  description = "Department of Economics <br> University of Oregon"
+  description = "Economics Program <br /> School of Public Policy <br /> Oregon State University"
   back_img = "images/background.jpg"
   # cv = "images/jerman_cv.pdf"
 
