--- a/config.toml
+++ b/config.toml
@@ -3,9 +3,9 @@ title = "Michael Jerman"
 theme = "hugo-nederburg-theme"
 languageCode = "en-us"
 # Enable comments by entering your Disqus shortname
-disqusShortname = ""
+# disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
-googleAnalytics = ""
+# googleAnalytics = ""
 preserveTaxonomyNames = true
 paginate = 5 #frontpage pagination
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$", "\\.tex$"]
