--- a/config.toml
+++ b/config.toml
@@ -92,7 +92,7 @@ publishDir = "docs"
   # facebook      = "full Social profile url in facebook"
   # googleplus    = "full profile url in googleplus"
   email         = "mail@michaeljerman.com"
-  # twitter       = "full profile url in twitter"
+  twitter       = "https://twitter.com/michaeljerman_"
   linkedin      = "https://www.linkedin.com/in/michael-jerman-b05a891b9"
   # stackoverflow = "full profile url in stackoverflow"
   # instagram     = "full profile url in instagram"
